--- a/Circuit Knights/Circuit Knights.csproj
+++ b/Circuit Knights/Circuit Knights.csproj
@@ -323,10 +323,14 @@
     <Compile Include="Assets\ProCore\ProBuilder\API Examples\Runtime Editing\RuntimeEdit.cs" />
     <Compile Include="Assets\ProCore\ProBuilder\API Examples\Vertex Colors\HighlightNearestFace.cs" />
     <Compile Include="Assets\Scripts\BasicPlayerController.cs" />
+    <Compile Include="Assets\Scripts\lance_Ray_cast.cs" />
     <Compile Include="Assets\Scripts\LanceControl.cs" />
     <Compile Include="Assets\Scripts\Lean.cs" />
     <Compile Include="Assets\Scripts\NewBehaviourScript.cs" />
+    <Compile Include="Assets\Scripts\Player.cs" />
     <Compile Include="Assets\Scripts\Quit.cs" />
+    <Compile Include="Assets\Scripts\SheildBlock.cs" />
+    <Compile Include="Assets\Scripts\timecontroler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\ProCore\ProBuilder\API Examples\Icosphere FFT\README.txt" />
