--- a/Circuit Knights/Circuit Knights.Plugins.csproj
+++ b/Circuit Knights/Circuit Knights.Plugins.csproj
@@ -5,16 +5,16 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{FA2E193E-174C-4313-1D43-B361D154257B}</ProjectGuid>
+    <ProjectGuid>{66DAAD0D-1803-0081-619A-AE070F8EA639}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AssemblyName>Assembly-CSharp</AssemblyName>
+    <AssemblyName>Assembly-CSharp-firstpass</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
-    <UnityProjectType>Game:1</UnityProjectType>
+    <UnityProjectType>GamePlugins:3</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.3.0f3</UnityVersion>
     <RootNamespace></RootNamespace>
@@ -318,28 +318,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="Circuit Knights.Plugins.csproj">
-      <Project>{66DAAD0D-1803-0081-619A-AE070F8EA639}</Project>
-      <Name>Circuit Knights.Plugins</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Assets\Scripts\Core\dbgVibrateController.cs" />
-    <Compile Include="Assets\Scripts\Core\GameController.cs" />
-    <Compile Include="Assets\Scripts\Core\TimeController.cs" />
-    <Compile Include="Assets\Scripts\Equipment\LanceControl.cs" />
-    <Compile Include="Assets\Scripts\Equipment\LanceRayCast.cs" />
-    <Compile Include="Assets\Scripts\Equipment\ShieldBlock.cs" />
-    <Compile Include="Assets\Scripts\GUI\CountDown.cs" />
-    <Compile Include="Assets\Scripts\GUI\ExitButton.cs" />
-    <Compile Include="Assets\Scripts\GUI\PlayMenu.cs" />
-    <Compile Include="Assets\Scripts\GUI\Quit.cs" />
-    <Compile Include="Assets\Scripts\Player\BasicPlayerController.cs" />
-    <Compile Include="Assets\Scripts\Player\Player.cs" />
-    <Compile Include="Assets\Scripts\Player\PlayerLeanAndDodge.cs" />
-    <Compile Include="Assets\Scripts\temporary\Lean.cs" />
-    <Compile Include="Assets\Scripts\temporary\Movment.cs" />
-    <Compile Include="Assets\Scripts\temporary\OLDPlayerLean.cs" />
+    <Compile Include="Assets\Plugins\OBJExport\OBJExporter.cs" />
+    <Compile Include="Assets\Plugins\ProCore\ProBuilder\API Examples\Icosphere FFT\Scripts\CameraControls.cs" />
+    <Compile Include="Assets\Plugins\ProCore\ProBuilder\API Examples\Icosphere FFT\Scripts\IcoBumpin.cs" />
+    <Compile Include="Assets\Plugins\ProCore\ProBuilder\API Examples\Misc\HueCube.cs" />
+    <Compile Include="Assets\Plugins\ProCore\ProBuilder\API Examples\Procedural Mesh\ExtrudeRandomEdges.cs" />
+    <Compile Include="Assets\Plugins\ProCore\ProBuilder\API Examples\Runtime Editing\RuntimeEdit.cs" />
+    <Compile Include="Assets\Plugins\ProCore\ProBuilder\API Examples\Vertex Colors\HighlightNearestFace.cs" />
+    <Compile Include="Assets\Plugins\XInputDotNet\Examples\XInputTestCS.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Plugins\ProCore\ProBuilder\API Examples\Icosphere FFT\README.txt" />
