--- a/Circuit Knights/Circuit Knights.csproj
+++ b/Circuit Knights/Circuit Knights.csproj
@@ -343,6 +343,7 @@
     <Compile Include="Assets\Scripts\Player\BasicPlayerController.cs" />
     <Compile Include="Assets\Scripts\Player\HorseController.cs" />
     <Compile Include="Assets\Scripts\Player\Player.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerLeanAndDodge.cs" />
     <Compile Include="Assets\Scripts\temporary\Lean.cs" />
     <Compile Include="Assets\Scripts\temporary\Movment.cs" />
