EOD commit; Writing a new game manager

--- a/Circuit Knights/Assembly-CSharp.csproj
+++ b/Circuit Knights/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
      <Compile Include="Assets\Scriptables\Variables\Vector3Variable.cs" />
      <Compile Include="Assets\Scripts\AudioControler.cs" />
      <Compile Include="Assets\Scripts\Core\DrawGizmo.cs" />
+     <Compile Include="Assets\Scripts\Core\Game.cs" />
      <Compile Include="Assets\Scripts\Core\GameCoordinator.cs" />
      <Compile Include="Assets\Scripts\Core\RandomClashSound.cs" />
      <Compile Include="Assets\Scripts\Core\RoundEndController.cs" />
